<resources>
    <string name="app_name">My Application222</string>
    <string name="dobro_pojalovat">Добро пожаловать!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook">Вход с Facebook</string>
    <string name="apple">Вход с Apple</string>
    <string name="regist">Регистрация</string>
    <string name="name">Имя</string>
    <string name="pochta">Адрес эл.почты</string>
    <string name="password">Пароль</string>
    <string name="forgetpassword">Забыли пароль?</string>
    <string name="voiti">Войти</string>
    <string name="voiti">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="zakaz">Ваш заказ</string>
    <string name="pochta">Адрес эл.почты</string>
</resources>