<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            style="@style/text_view_style"
            android:layout_width="171dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="-35sp"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="#99E265"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            style="@style/text_view_style"
            android:text="@string/voiti"
            android:textColor="#C2CCBA"
            android:textSize="33sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textView"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/pochta"
            android:textColor="#6A6868"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textView10"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:textColor="#6A6868"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_view_style"
            android:gravity="center"
            android:layout_margin="30dp"
            android:text="@string/forgetpassword"
            android:textColor="#99E265"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="270dp"
            android:layout_height="57dp"
            android:background="@color/green"
            android:text="@string/voiti"
            style="@style/text_view_style"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>