<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="343dp"
            android:layout_height="57dp"
            android:background="#E4E3E3"
            android:text="@string/apple"
            android:textAllCaps="false"
            style="@style/text_view_style"
            android:textSize="27sp"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button1"
            android:layout_width="343dp"
            android:layout_height="57dp"
            android:layout_margin="18dp"
            android:background="#272CA8"
            android:text="@string/facebook"
            style="@style/text_view_style"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView1"
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/regist"
            style="@style/text_view_style"
            android:textSize="24dp"
            android:textColor="#99E265"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_height="30dp"
            android:text="Войти"
            style="@style/text_view_style"
            android:textSize="24dp"
            android:textColor="#99E265"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="410dp"
            android:layout_height="400dp"
            app:srcCompat="@drawable/___123__removebg_preview__1_" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>